# ps3-worker

./: .env  README.md  config.py  main.py  pyproject.toml
ps3_worker/: config.py  constants.py
ps3_worker/consumers/: data_consumer_in.py
ps3_worker/prompts/: extract_variants_prompt.py  first_extraction_prompt.py  refine_results_prompt.py
ps3_worker/services/: __init__.py  doc_managament.py  embeddings_store.py  minio_service.py  mongo_service.py  odds_path_calculator.py  pdf_pipeline.py  sse_service.py  vllm_client.py
